# score-monster

./: .gitignore  Pipfile  Procfile  README.md  automatic.py  main.py  pyproject.toml  requirements.txt
services/: __init__.py  gsheets.py  hackerrank.py  mediator.py
services/constants/: fixed_numbers.py  templates.py
