[tool.poetry]
name = "score-monster"
version = "0.1.0"
description = "Automatic collection of HackerRank scores"
authors = ["IIC1103"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
gspread = "^3.4.2"
oauth2client = "^4.1.3"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
